# water

./: .gitignore  CMakeLists.txt  README.md
lib/: glm.lib
shaders/: GerstnerWave.vert  Water.frag
src/: GerstnerWave.cpp  GerstnerWave.h  OpenGLVersionChecker.cpp  Water.cpp  glad.c
